# nf

./: .notefinder.sample  CREDITS.md  LICENSE.md  Makefile.in  README.md  cfg.c  cfg.h  cmd.c  common.h  configure.ac  dir.c  dir.h  editor.c  editor.h  entry.c  entry.h  ipc.c  ipc.h  json.c  json.h  keep.c  main.c  map.c  map.h  mozilla.c  mozilla.h  notefinder.desktop.in  perl.c  perl.h  resource.xml  search.c  search.h  server.c  server.h  slice.c  slice.h  source.c  source.h  syncer.c  syncer.h  (+3 more)
backends/: dir.c  keep.c  mozilla.c
providers/: dir.c  keep.c  mozilla.c
scripts/: sloc.sh
tests/: get_first_n_chars_test.c  map_test.c
ui/: common.h  editor.c  editor.h  listbox.c  listbox.h  window.c
